Add workspace/save endpoint: fetch URL, validate type, write to _workspace/